--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html> 
+<html lang = "ru">
 <head>
 <meta charset="utf-8">
 <title>Let me introduce myself</title> 
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div  class="ferst">
-<string><h1>SHCETININ EUGENE</h1></string>
+<h1>SHCETININ EUGENE</h1>
 <a href="https://github.com/EugeneUrsus"><img src="https://avatars.githubusercontent.com/u/119811823?s=400&u=4a63dc68f05ad9eecd82b349ebedf0192bfcc079&v=4" height="200" width="200" alt="SHCETININ EUGENE" title="SHCETININ EUGENE"> </a>
 </div>
 </body>
