--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html> 
-<html lang = "ru">
-<head>
-<meta charset="utf-8">
-<title>Let me introduce myself</title> 
-<link rel="stylesheet" href="style.css">
-</head>
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Заголовок страницы</title>
+    <link rel="stylesheet" href="./styles/style.css">
+  
 <body>
-<div  class="ferst">
-<h1>SHCETININ EUGENE</h1>
-<a href="https://github.com/EugeneUrsus"><img src="https://avatars.githubusercontent.com/u/119811823?s=400&u=4a63dc68f05ad9eecd82b349ebedf0192bfcc079&v=4" height="200" width="200" alt="SHCETININ EUGENE" title="SHCETININ EUGENE"> </a>
-</div>
-</body>
+    
+  </body>
 </html>
