--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Заголовок страницы</title>
     <link rel="stylesheet" href="./styles/style.css">
-  
-<body>
-    
+  </head>   
+  <body>
+    <p> SCHETININ EUGENE</p>
   </body>
 </html>
