--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Заголовок страницы</title>
-    <link rel="stylesheet" href="./styles/style.css">
-  </head>   
-  <body>
-    <p> SCHETININ EUGENE</p>
-  </body>
+<head>
+<meta charset="utf-8" />
+<title>Название сайта</title>
+</head>
+<body>
+<p>ЭТО ЕЩЕ ЦВЕТОЧКИ</p>
+</body>
 </html>
