--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
 <body> <!--\assets  https://avatars.githubusercontent.com/u/119811823?v=4 -->
-    <div class="hhh"><img src=".\assets\1.jpeg" width="230" height="230" alt="EVGEN" title="EVGEN"></div>
+    <div class="hhh"><img src="./assets/1.jpeg" width="230" height="230" alt="EVGEN" title="EVGEN"></div>
     <header class = "header">
         <div class="container">
         <section class="section-item"> 
@@ -31,12 +31,12 @@
     </header>
     <main class = "main">
         <div class="container" class="main-container">
-        <section clacc="section"><h1 class="section-title"> SHCETININ EUGENE </h1></section>
-        <section clacc="section" id="contacts"><h1 class="section-title"> contacts </h1><p>1.TELEPHONE: +79500189860  <br> <a href="https://github.com/EugeneUrsus">My profile:</a></p> </section>
-        <section clacc="section" id="summary"><h1 class="section-title"> summary </h1><p>2.I plan to finish the first, second and third levels of study at the school "RS.school"<br>
+        <section class="section"><h1 class="section-title"> SHCETININ EUGENE </h1></section>
+        <section class="section" id="contacts"><h2 class="section-title"> contacts </h2><p>1.TELEPHONE: +79500189860  <br> <a href="https://github.com/EugeneUrsus">My profile:</a></p> </section>
+        <section class="section" id="summary"><h2 class="section-title"> summary </h2><p>2.I plan to finish the first, second and third levels of study at the school "RS.school"<br>
 I want to get an internship and show my knowledge in practice.</p></section>
-<section clacc="section" id="skills"><h1 class="section-title"> skills </h1><p>3.I know JAVA language syntax</p></section>
-<section clacc="section" id="code"><h1 class="section-title"> code </h1><p><a href="https://www.codewars.com/kata/50654ddff44f800200000004/train/javascript">Code example:</a>
+<section class="section" id="skills"><h2 class="section-title"> skills </h2><p>3.I know JAVA language syntax</p></section>
+<section class="section" id="code"><h2 class="section-title"> code </h2><p><a href="https://www.codewars.com/kata/50654ddff44f800200000004/train/javascript">Code example:</a>
     <pre> java
 
 class App {
@@ -46,15 +46,19 @@ class App {
 }
     </pre></p>
 </section>
-<section clacc="section" id="projects"><h1 class="section-title"> projects </h1><p>5.Work experience. <br><a href="https://github.com/EugeneUrsus/rsschool-cv.git">My project "CV":</a></p> </section>
-<section clacc="section" id="courses"><h1 class="section-title"> courses </h1><p>6.Studied JAVA in JavaRash application</p></section>
-<section clacc="section" id="english"><h1 class="section-title"> english </h1><p> English is basic</p></section>
+<section class="section" id="projects"><h2 class="section-title"> projects </h2><p>5.Work experience. <br><a href="https://github.com/EugeneUrsus/rsschool-cv.git">My project "CV":</a></p> </section>
+<section class="section" id="courses"><h2 class="section-title"> courses </h2><p>6.Studied JAVA in JavaRash application</p></section>
+<section class="section" id="english"><h2 class="section-title"> english </h2><p> English is basic</p></section>
     </div></main>
     <footer class = "footer"><div class="container">
         <p> <a href="https://github.com/EugeneUrsus">My github </a>
             <span class="f6 color-fg-muted">
             © 2022 GitHub, Inc.
-          </span> <a href="JavaScript/Front-end"> JavaScript/Front-end</a></p>
-    </div></footer>
+          </span> <a href="JavaScript/Front-end"> JavaScript/Front-end</a> </p>
+              </div>
+              <a href="https://rs.school/js/">
+                <img width="100" src="https://app.rs.school/static/images/logo-rsschool3.png" alt="RS school icon">
+                </a>
+               </footer>
 </body>
 </html>
