--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
 <body> <!--\assets  https://avatars.githubusercontent.com/u/119811823?v=4 -->
-    <div class="hhh"><img src="./assets/1.jpeg" width="230" height="230" alt="EVGEN" title="EVGEN"></div>
-    <header class = "header">
+       <header class = "header">
         <div class="container">
         <section class="section-item"> 
         <nav class="nav">
@@ -30,7 +29,7 @@
         </div>
     </header>
     <main class = "main">
-        <div class="container" class="main-container">
+        <div class="container main-container"><img src="./assets/1.jpeg" width="230" height="230" alt="EVGEN" title="EVGEN">
         <section class="section"><h1 class="section-title"> SHCETININ EUGENE </h1></section>
         <section class="section" id="contacts"><h2 class="section-title"> contacts </h2><p>1.TELEPHONE: +79500189860  <br> <a href="https://github.com/EugeneUrsus">My profile:</a></p> </section>
         <section class="section" id="summary"><h2 class="section-title"> summary </h2><p>2.I plan to finish the first, second and third levels of study at the school "RS.school"<br>
@@ -55,10 +54,11 @@ class App {
             <span class="f6 color-fg-muted">
             © 2022 GitHub, Inc.
           </span> <a href="JavaScript/Front-end"> JavaScript/Front-end</a> </p>
+          <a href="https://rs.school/js/">
+            <img width="100" src="https://app.rs.school/static/images/logo-rsschool3.png" alt="RS school icon">
+            </a>
               </div>
-              <a href="https://rs.school/js/">
-                <img width="100" src="https://app.rs.school/static/images/logo-rsschool3.png" alt="RS school icon">
-                </a>
+              
                </footer>
 </body>
 </html>
