--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
         </div>
     </header>
     <main class = "main">
-        <div class="container main-container"><img src="./assets/1.jpeg" width="230" height="230" alt="EVGEN" title="EVGEN">
+        <section class="container main-container"><img src="./assets/1.jpeg" width="230" height="230" alt="EVGEN" title="EVGEN">
         <section class="section"><h1 class="section-title"> SHCETININ EUGENE </h1></section>
-        <section class="section" id="contacts"><h2 class="section-title"> contacts </h2><p>1.TELEPHONE: +79500189860  <br> <a href="https://github.com/EugeneUrsus">My profile:</a></p> </section>
-        <section class="section" id="summary"><h2 class="section-title"> summary </h2><p>2.I plan to finish the first, second and third levels of study at the school "RS.school"<br>
+        <section class="section" id="contacts"><h2 class="section-title"> contacts </h2><ul><li>TELEPHONE: +79500189860 </li> <li><a href="https://github.com/EugeneUrsus">My profile:</a></li></ul></section>
+        <section class="section" id="summary"><h2 class="section-title"> summary </h2><p>I plan to finish the first, second and third levels of study at the school "RS.school"<br>
 I want to get an internship and show my knowledge in practice.</p></section>
-<section class="section" id="skills"><h2 class="section-title"> skills </h2><p>3.I know JAVA language syntax</p></section>
-<section class="section" id="code"><h2 class="section-title"> code </h2><p><a href="https://www.codewars.com/kata/50654ddff44f800200000004/train/javascript">Code example:</a>
-    <pre> java
+<section class="section" id="skills"><h2 class="section-title"> skills </h2><ul><li>I know JAVA language syntax</li></section>
+<section class="section" id="code"><h2 class="section-title"> code </h2><a href="https://www.codewars.com/kata/50654ddff44f800200000004/train/javascript"><ul><li>Code example:</li></ul></a>
+    <pre><p> java
 
 class App {
     public static void main(String[] args) {
         System.out.println("Hello, World!");
     }
 }
-    </pre></p>
+</p> </pre>
 </section>
-<section class="section" id="projects"><h2 class="section-title"> projects </h2><p>5.Work experience. <br><a href="https://github.com/EugeneUrsus/rsschool-cv.git">My project "CV":</a></p> </section>
-<section class="section" id="courses"><h2 class="section-title"> courses </h2><p>6.Studied JAVA in JavaRash application</p></section>
-<section class="section" id="english"><h2 class="section-title"> english </h2><p> English is basic</p></section>
+<section class="section" id="projects"><h2 class="section-title"> projects </h2><ul>Work experience. <li><a href="https://github.com/EugeneUrsus/rsschool-cv.git">My project "CV":</a></li></ul> </section>
+<section class="section" id="courses"><h2 class="section-title"> courses </h2><ul><li>Studied JAVA in JavaRash application</li></ul></section>
+<section class="section" id="english"><h2 class="section-title"> english </h2><ul><li> English is basic</li></ul></section>
     </div></main>
     <footer class = "footer"><div class="container">
         <p> <a href="https://github.com/EugeneUrsus">My github </a>
