feat: change css ctyle html class-naw-item and add &nbsp for shcetinin eugene

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">  
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
-<body> <!--\assets  https://avatars.githubusercontent.com/u/119811823?v=4 -->
+<body> 
        <header class = "header">
         <div class="container">
         <section class="section-item"> 
@@ -30,7 +30,7 @@
     </header>
     <main class = "main">
         <section class="container main-container"><img src="./assets/1.jpeg" width="230" height="230" alt="EVGEN" title="EVGEN">
-        <section class="section"><h1 class="section-title"> SHCETININ EUGENE </h1></section>
+        <section class="section"><h1 class="section-title">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;SHCETININ EUGENE </h1></section>
         <section class="section" id="contacts"><h2 class="section-title"> contacts </h2><ul><li>TELEPHONE: +79500189860 </li> <li><a href="https://github.com/EugeneUrsus">My profile:</a></li></ul></section>
         <section class="section" id="summary"><h2 class="section-title"> summary </h2><p>I plan to finish the first, second and third levels of study at the school "RS.school"<br>
 I want to get an internship and show my knowledge in practice.</p></section>
